syntax = "proto3";

import "google/protobuf/timestamp.proto";  
import "Protos/Customer/types.proto";

message CustomerWasCreated {
    string id = 1;
    string documentNumber = 2;
    string name = 3;
    string motherName = 4;
    google.protobuf.Timestamp birthDate = 5;
    google.protobuf.Timestamp created = 6;
    CustomerStatusType status = 7;
}